--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre Entregable 1</title>
-    <script src="./scripts/script.js"></script>
+    <title>Simulador de Inventario</title>
+    <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <p style="font-size: 20px;">En este algoritmo busco hacer la suma de algunos valores a tener en cuenta para el costo final de una obra de construcción</p>
+    <h1>Simulador de Inventario</h1>
+
+    <form id="productoForm">
+        <label for="nombre">Nombre del Producto:</label>
+        <input type="text" id="nombre" name="nombre" required>
+        <br><br>
+
+        <label for="cantidad">Cantidad:</label>
+        <input type="number" id="cantidad" name="cantidad" required>
+        <br><br>
+
+        <label for="precio">Precio (por unidad):</label>
+        <input type="number" id="precio" name="precio" step="0.01" required>
+        <br><br>
+
+        <button type="submit">Agregar Producto</button>
+    </form>
+
+    <h2>Inventario</h2>
+    <table id="tablaInventario">
+        <thead>
+            <tr>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Precio Unitario</th>
+                <th>Total</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
+    <h3>Valor total del inventario: $<span id="valorTotal">0.00</span></h3>
+
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
