--- a/index.html
+++ b/index.html
@@ -3,45 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap" rel="stylesheet">
     <title>Simulador de Inventario</title>
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <h1>Simulador de Inventario</h1>
-
-    <form id="productoForm">
-        <label for="nombre">Nombre del Producto:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <br><br>
-
-        <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" name="cantidad" required>
-        <br><br>
-
-        <label for="precio">Precio (por unidad):</label>
-        <input type="number" id="precio" name="precio" step="0.01" required>
-        <br><br>
-
-        <button type="submit">Agregar Producto</button>
-    </form>
-
-    <h2>Inventario</h2>
-    <table id="tablaInventario">
-        <thead>
-            <tr>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Precio Unitario</th>
-                <th>Total</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-
-    <h3>Valor total del inventario: $<span id="valorTotal">0.00</span></h3>
-
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a class="bottonHeader" href="">Inicio</a>
+                </li>
+                <li>
+                    <a class="bottonHeader" href="">inventario Disponible</a>
+                </li>
+                <li>
+                    <a class="bottonHeader" href="">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+        <img class="iconoHeader" src="./images/icono.png" alt="">
+    </header>
+    <main>
+        <section class="seccion1">
+            <div class="seccionTitulo">
+                <h1 class="titulo1">Simulador de Inventario</h1>
+            </div>
+            <form class="formularioPrincipal" id="productoForm">
+                <label class="entradaDatos" for="nombre">Nombre del Producto:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                <label class="entradaDatos" for="cantidad">Cantidad:</label>
+                <input type="number" id="cantidad" name="cantidad" required>
+                <label class="entradaDatos" for="precio">Precio (por unidad):</label>
+                <input type="number" id="precio" name="precio" step="0.01" required>
+                <button class="botonAgregar" type="submit">Agregar Producto</button>
+            </form>
+        </section>
+        <section>
+            <h2>Inventario</h2>
+            <table id="tablaInventario">
+                <thead>
+                    <tr>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th>Precio Unitario</th>
+                        <th>Total</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        
+            <h3 class="textValorTotal">Valor total del inventario: $<span id="valorTotal">0.00</span></h3>
+        </section>
+        <section class="seccionImagenes">
+            <img class="imgDescriptiva" src="./images/inventario (1).png" alt="">
+            <img class="imgDescriptiva" src="./images/inventario (2).png" alt="">
+            <img class="imgDescriptiva" src="./images/inventario.png" alt="">
+        </section>
+        <section class="seccionTexto">
+            <p class="textoBajoImagenes">Somos la mejor opcion para tu que gestiones tu inventario.</p>
+        </section>
+    </main>
+    <footer>
+        <p class="textFooter">
+        Proyecto para el curso de JavaScript de Agustín Andrade Gaitán.
+        </p>
+        <p class="textFooter">
+        2024
+        </p>
+    </footer>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
