añado imagenes al footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 <tbody>
                 </tbody>
             </table>
-        
             <h3 class="textValorTotal">Valor total del inventario: $<span id="valorTotal">0.00</span></h3>
         </section>
         <section class="seccionImagenes">
@@ -65,16 +64,23 @@
             <img class="imgDescriptiva" src="./images/inventario.png" alt="">
         </section>
         <section class="seccionTexto">
-            <p class="textoBajoImagenes">Somos la mejor opcion para tu que gestiones tu inventario.</p>
+            <p class="textoBajoImagenes">Somos la mejor opción para tu que gestiones tu inventario.</p>
         </section>
     </main>
     <footer>
-        <p class="textFooter">
-        Proyecto para el curso de JavaScript de Agustín Andrade Gaitán.
-        </p>
-        <p class="textFooter">
-        2024
-        </p>
+        <section>
+            <p class="textFooter">
+            Proyecto para el curso de JavaScript, de Agustín Andrade Gaitán.
+            </p>
+            <p class="textFooter">
+            2024
+            </p>
+        </section>
+        <section class="seccionimgftr">
+            <img class="imgFooter" src="./images/logoJs.png" alt="">
+            <img class="imgFooter" src="./images/codigo.png" alt="">
+            <img class="imgFooter" src="./images/diseno-de-paginas-web.png" alt="">
+        </section>
     </footer>
     <script src="./scripts/main.js"></script>
 </body>
