cambios al boton eliminar y otros

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             </table>
             <h3 class="textValorTotal">Valor total del inventario: $<span id="valorTotal">0.00</span></h3>
         </section>
+        <section class="seccionTexto">
+            <p class="textoSobreImagenes">Somos la mejor opción para tu que gestiones tu inventario.</p>
+        </section>
         <section class="seccionImagenes">
             <img class="imgDescriptiva" src="./images/inventario (1).png" alt="">
             <img class="imgDescriptiva" src="./images/inventario (2).png" alt="">
             <img class="imgDescriptiva" src="./images/inventario.png" alt="">
-        </section>
-        <section class="seccionTexto">
-            <p class="textoBajoImagenes">Somos la mejor opción para tu que gestiones tu inventario.</p>
         </section>
     </main>
     <footer>
